[gd_scene format=3 uid="uid://csukumyyn3u87"]

[ext_resource type="Texture2D" uid="uid://wept5orkq522" path="res://Assets/PlaceholderSprites/Game Jam Placeholder Sprites/DBbackgroundconceptPLACEHOLDER.png" id="1_ok6i5"]
[ext_resource type="Script" uid="uid://boiuqf0edn212" path="res://Scripts/game_over.gd" id="1_wpovb"]
[ext_resource type="FontFile" uid="uid://dg2rks2w45mwb" path="res://Assets/Fonts/Ghost Factory.ttf" id="2_4p3hf"]
[ext_resource type="FontFile" uid="uid://dxwegbkjgdcue" path="res://Assets/Fonts/Adventurer.ttf" id="3_wpovb"]

[sub_resource type="LabelSettings" id="LabelSettings_w88jv"]
font = ExtResource("2_4p3hf")
font_size = 71

[sub_resource type="LabelSettings" id="LabelSettings_ckxb7"]
font = ExtResource("2_4p3hf")
font_size = 86

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pkuq6"]
bg_color = Color(0.03137255, 0.09019608, 0.18431373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5i2ib"]
bg_color = Color(0.13725491, 0.25490198, 0.37254903, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w88jv"]
bg_color = Color(0.18719208, 0.33196062, 0.48181367, 1)

[node name="GameOver" type="Control" unique_id=1209674926]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wpovb")

[node name="TextureRect" type="TextureRect" parent="." unique_id=1233960910]
layout_mode = 0
offset_left = -50.0
offset_top = -43.0
offset_right = 1936.0
offset_bottom = 1281.0
texture = ExtResource("1_ok6i5")
expand_mode = 1

[node name="NightTint" type="CanvasModulate" parent="TextureRect" unique_id=1029001015]
color = Color(0.38177937, 0.461246, 0.5989667, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1418098966]

[node name="Control" type="Control" parent="CanvasLayer" unique_id=471250900]
layout_mode = 3
anchors_preset = 0
offset_right = 1924.0
offset_bottom = 1082.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control" unique_id=1813083435]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="EndGameLabel" type="Label" parent="CanvasLayer/Control/VBoxContainer" unique_id=1409376171]
custom_minimum_size = Vector2(1200, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "and so cooper ran out of cash.
perhaps this is how the story ends..."
label_settings = SubResource("LabelSettings_w88jv")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ScoreLabel" type="Label" parent="CanvasLayer/Control/VBoxContainer" unique_id=2051605865]
custom_minimum_size = Vector2(1200, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "SCORE"
label_settings = SubResource("LabelSettings_ckxb7")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer" unique_id=1564678422]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/separation = 173

[node name="PlayAgainButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer" unique_id=2064238230]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_wpovb")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_pkuq6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5i2ib")
theme_override_styles/hover = SubResource("StyleBoxFlat_w88jv")
text = "PLAY AGAIN"

[node name="MainMenuButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer" unique_id=358081962]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_wpovb")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_pkuq6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5i2ib")
theme_override_styles/hover = SubResource("StyleBoxFlat_w88jv")
text = "MAIN MENU"

[node name="QuitButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/HBoxContainer" unique_id=1320765579]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_wpovb")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_pkuq6")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5i2ib")
theme_override_styles/hover = SubResource("StyleBoxFlat_w88jv")
text = "QUIT"

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
